[package]
name = "neocities_cli"
version = "0.2.1"
authors = ["Jacob Benison"]
description = "A CLI tool for managing websites hosted on Neocities."
keywords = ["neocities", "webmaster", "open-source", "static-site"]
repository = "https://github.com/ge3224/neocities"
license = "MIT"
readme = "README.md"
edition = "2021"

[dependencies]
thiserror = "1.0.38"
url = "2.3.1"
reqwest = { version = "0.11", features = ["stream", "multipart", "json"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version="0.7.7", features = ["codec"]}
serde = "1.0.152"
serde_derive = "1.0.152"
serde_json = "1.0.93"
serial_test = "2.0.0"
sha-1 = "0.10.1"
chrono = "0.4.24"
tempfile = "3.8.0"
